fix menu whitespace

--- a/css/banhcookie.css
+++ b/css/banhcookie.css
@@ -238,7 +238,6 @@ div.menu10 ul{
     width: 140px;
 }
 .menu14{
-    word-break: break-all;
     font-size: 15px;
     margin-top: 4px ;
     white-space: normal;
@@ -262,11 +261,17 @@ div.menu10 ul{
 .menu3bars{
     display: none;
 }
+.menu12 a{
+    white-space:  nowrap;
+}
 
 
 
 
             /* KET THUC CSS MENU */
+
+
+            
             
 .banhcookie{
     font-family: Lato,Helvetica,Arial,sans-serif;
