--- a/css/caphecct.css
+++ b/css/caphecct.css
@@ -238,7 +238,6 @@ div.menu10 ul{
     width: 140px;
 }
 .menu14{
-    word-break: break-all;
     font-size: 15px;
     margin-top: 4px ;
     white-space: normal;
@@ -262,12 +261,14 @@ div.menu10 ul{
 .menu3bars{
     display: none;
 }
+.menu12 a{
+    white-space:  nowrap;
+}
 
 
 
 
             /* KET THUC CSS MENU */
-
 
 .main{
     background-color: #F7F7F7;
