--- a/css/headerfooter.css
+++ b/css/headerfooter.css
@@ -1,13 +1,14 @@
-        /* CSS CUA MENU/HEADER */
+/* CSS CUA MENU/HEADER */
 body{
-    
     margin: 0;
     background-color: white;
-    white-space: nowrap;
     font-family: sans-serif;
 }
 header{
     background-color: #f7f7f7;
+    height: 100%;
+    z-index: 10;
+    position: relative;
 }
 .menu1{
     height: 10px;
@@ -15,18 +16,16 @@ header{
 }
 .menu2{
     margin-top: 12px;
-    padding-right: 40px;
-    margin-left: -50px;
+    padding: 0 20px;
+    
 }
 .menu37{
     display: flex;
     justify-content:center ;
-    padding: 6px 0;
+    padding-bottom: 16px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px 10px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
-    height: 90px;
 }
 .menu34{
-    margin-left: 0px;
     margin-top: 15px;
     font-family: sans-serif;
     font-size: 14px;
@@ -53,6 +52,7 @@ a{
 /*menu*/
 .menu3{
     display: flex;
+    flex-wrap: wrap;
 }
 ul{
     list-style: none;
@@ -105,24 +105,27 @@ ul{
     left: 0px;
     width: 100%;
     position: absolute;
-    top: 112px;
-    background-color: rgba(0, 0, 0, 0.87);
+    top: 105px;
+    background-color: rgb(0, 0, 0);
     
 } 
 ul.menu9{
     padding: 0px 300px;
     overflow: hidden;
     height: 0;
-    opacity: 0;
-    transition: height 0ms 600ms, opacity 600ms 0ms;
+    max-height: 0;
 }
 ul.menu4 li:hover ul.menu9{
-    height: auto; opacity: 1;
-    transition: height 0ms 0ms, opacity 700ms 0ms;
+    height:auto;
+    max-height: 1000px;
+    transition-property: max-height;
+    transition-timing-function: ease-in-out;
+    transition-duration: 600ms;
+    transition-delay: 200ms;
 }
 
 .menu8{
-    background-color: rgba(21, 21, 21, 0.618);
+    background-color: rgb(21, 21, 21);
 }
 .menu9{
     background-color: rgb(29, 29, 29);
@@ -132,6 +135,7 @@ ul.menu4 li:hover ul.menu9{
     font-size: 13px;
     font-weight: bold;
     padding: 0 30px;
+    white-space: nowrap;
 }
 .menu12{
     margin-left: -10px;
@@ -158,7 +162,7 @@ ul.menu4 li:hover ul.menu9{
     width: 78%;
     border: none;
     height: 1px;
-    background-color: rgba(255, 255, 255, 0.301);
+    background-color: rgb(255, 255, 255);
     margin-top: 62px;
     margin-left: 10px;
 }
@@ -234,7 +238,6 @@ div.menu10 ul{
     width: 140px;
 }
 .menu14{
-    word-break: break-all;
     font-size: 15px;
     margin-top: 4px ;
     white-space: normal;
@@ -246,12 +249,26 @@ div.menu10 ul{
     color: white;
 }
 .menu32{
-    margin-left: 200px;
+    margin-left: 10%;
 }
 .menu36{
     margin: 4px 6px;
+    white-space: nowrap;
 }
-        /* KET THUC CSS MENU */
+.menu9 ul li a:hover{
+    background: green;
+}
+.menu3bars{
+    display: none;
+}
+.menu12 a{
+    white-space:  nowrap;
+}
+
+
+
+
+            /* KET THUC CSS MENU */
 
 
 
